# akinator.py

./: .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  pylint.yml  python-publish.yml  unittest.yml
akinator/: __init__.py  akinator.py  async_client.py  client.py  exceptions.py  utils.py
akinator/async_aki/: __init__.py  async_akinator.py
docs/: conf.py  index.rst
examples/: aki.py  async_aki.py  basic.py  basic_async.py  discord_bot.py
tests/: test_async_client.py  test_client.py
