[tool.poetry]
name = "akinator"
version = "1.0.0"
description = "An API wrapper for Akinator."
authors = ["Mr.Brawler <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Pysics/akinator.py/"
documentation = "https://akinator.readthedocs.io/"
keywords = ["python", "akinator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["akinator", "akinator.async_aki"]

[tool.poetry.dependencies]
requests = "2.28.*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Pysics/akinator.py/issues"