[tool.poetry]
name = "akinator.py"
version = "2.0.1"
description = "A basic API wrapper for Akinator."
authors = ["Ombucha <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Ombucha/akinator.py/"
documentation = "https://akinator.readthedocs.io/"
keywords = ["python", "akinator"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["akinator"]

[tool.poetry.dependencies]
cloudscraper = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ombucha/akinator.py/issues"